# drive-ocr

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  build.rs  deny.toml  renovate.json
.cargo/: config.toml
.github/: Dockerfile
.github/workflows/: rust.yml
fixtures/: expected.txt
src/: errors.rs  generate_key.rs  lib.rs  main.rs  ocr.rs  queue.rs  storage.rs  tracing_config.rs  upload.rs  worker.rs
