[package]
name = "drive-ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-channel = "1.9.0"
async-trait = "0.1.73"
camino = { version = "1.1.6", features = ["serde", "serde1"] }
clap = { version = "4.4.5", features = ["derive", "env"] }
color-eyre = "0.6.2"
dotenvy = { version = "0.15.7", features = ["clap"] }
futures-util = "0.3.28"
google-drive3 = "5.0.3+20230115"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
lazy_static = "1.4.0"
mime = "0.3.17"
opentelemetry = { version = "0.20.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.13.0", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.12.0"
redis = { version = "0.23.3", features = ["tokio", "aio", "tokio-comp"] }
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["stream", "rustls-tls"], default-features=false }
rsmq_async = "6.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.7"
tempfile = "3.8.0"
test-case = "3.2.1"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-opentelemetry = { version = "0.21.0", features = ["metrics"] }
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v7", "serde"] }
warp = "0.3.5"

[dev-dependencies]
prettydiff = "0.6.4"
strsim = "0.10.0"

[build-dependencies]
chrono = "0.4.31"
