[package]
name = "drive-ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-channel = "2.2.1"
async-trait = "0.1.80"
camino = { version = "1.1.6", features = ["serde", "serde1"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = "0.6.3"
dotenvy = { version = "0.15.7", features = ["clap"] }
futures-util = "0.3.30"
google-drive3 = "5.0.4"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
lazy_static = "1.4.0"
mime = "0.3.17"
opentelemetry = { version = "0.25.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.25.0", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.25.0"
redis = { version = "0.26.0", features = ["tokio", "aio", "tokio-comp"] }
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["stream", "rustls-tls"], default-features=false }
rsmq_async = "12.0.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
tempfile = "3.10.1"
test-case = "3.3.1"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-opentelemetry = { version = "0.25.0", features = ["metrics"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
warp = "0.3.7"

[dev-dependencies]
prettydiff = "0.7.0"
strsim = "0.11.1"

[build-dependencies]
chrono = "0.4.38"
